[gd_scene load_steps=36 format=1]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://sprites/player.png" type="Texture" id=2]
[ext_resource path="res://sprites/dust.png" type="Texture" id=3]
[ext_resource path="res://sprites/player_sl.tres" type="SampleLibrary" id=4]
[ext_resource path="res://sprites/osb_left.png" type="Texture" id=5]
[ext_resource path="res://sprites/osb_right.png" type="Texture" id=6]
[ext_resource path="res://sprites/osb_jump.png" type="Texture" id=7]
[ext_resource path="res://sprites/osb_fire.png" type="Texture" id=8]
[ext_resource path="res://scenes/hud.tscn" type="PackedScene" id=9]
[ext_resource path="res://sprites/blackscreen.png" type="Texture" id=10]
[ext_resource path="res://scenes/dialog.tscn" type="PackedScene" id=11]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( -0.0828857, 25.17, -16, -22, 16, -22 )

[sub_resource type="ColorRamp" id=2]

offsets = FloatArray( 0, 1 )
colors = ColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="Animation" id=3]

resource/name = "after_damage"
length = 0.1
loop = false
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:modulate")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("screen/blackscreen:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 0, 0 ),
"update": 0,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("screen/blackscreen:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 0 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=5]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("screen/blackscreen:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 0, 0 ),
"update": 0,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("screen/blackscreen:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 0 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=6]

length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 22 ]
}

[sub_resource type="Animation" id=7]

length = 0.01
loop = false
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 13 ]
}

[sub_resource type="Animation" id=8]

length = 0.01
loop = false
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 10 ]
}

[sub_resource type="Animation" id=9]

length = 0.5
loop = false
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.25 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 21, 22 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:modulate")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.25, 0.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.175145, 0.0674133, 0.367188, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=10]

length = 2.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": FloatArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 16 ]
}

[sub_resource type="Animation" id=11]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.3 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8 ]
}

[sub_resource type="Animation" id=12]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.3 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 4, 4, 5 ]
}

[sub_resource type="Animation" id=13]

length = 1.0
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22 ]
}

[sub_resource type="Animation" id=14]

length = 0.01
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 13 ]
}

[sub_resource type="Animation" id=15]

length = 0.01
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 10 ]
}

[sub_resource type="Animation" id=16]

length = 1.0
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": FloatArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 1, 0, 1 ]
}

[sub_resource type="Animation" id=17]

length = 1.0
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": FloatArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 13, 14, 15, 14 ]
}

[sub_resource type="Animation" id=18]

length = 1.0
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": FloatArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 10, 11, 12, 11 ]
}

[sub_resource type="Animation" id=19]

length = 0.01
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=20]

length = 0.01
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=21]

length = 1.0
loop = false
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.25, 0.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 23, 25, 21 ]
}

[sub_resource type="Animation" id=22]

length = 0.01
loop = false
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 9 ]
}

[sub_resource type="Animation" id=23]

length = 1.0
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 26, 27 ]
}

[sub_resource type="RectangleShape2D" id=24]

custom_solver_bias = 0.0
extents = Vector2( 10, 5.18799 )

[node name="player" type="RigidBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 2
mass = 3.0
friction = 0.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = true
continuous_cd = 0
contacts_reported = 3
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]

visibility/light_mask = 0
transform/scale = Vector2( 2, 2 )
z/z = 1
texture = ExtResource( 2 )
vframes = 2
hframes = 16
frame = 26

[node name="dust" type="Particles2D" parent="."]

transform/pos = Vector2( 0, 20 )
transform/scale = Vector2( 2, 2 )
config/amount = 10
config/lifetime = 1.0
config/emitting = false
config/process_mode = 1
config/half_extents = Vector2( 2, 2 )
config/local_space = false
config/texture = ExtResource( 3 )
params/direction = 0.0
params/spread = 10.0
params/linear_velocity = 0.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 2.0
params/final_size = 2.0
params/hue_variation = 0.0
params/anim_speed_scale = 0.0
params/anim_initial_pos = 0.0
randomness/direction = 1.0
randomness/spread = 50.0
color/color_ramp = SubResource( 2 )

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/after_damage = SubResource( 3 )
anims/fadein = SubResource( 4 )
anims/fadeout = SubResource( 5 )
anims/falling = SubResource( 6 )
anims/falling_weapon_left = SubResource( 7 )
anims/falling_weapon_right = SubResource( 8 )
anims/got_damage = SubResource( 9 )
anims/idle = SubResource( 10 )
anims/idle_weapon_left = SubResource( 11 )
anims/idle_weapon_right = SubResource( 12 )
anims/jumping = SubResource( 13 )
anims/jumping_weapon_left = SubResource( 14 )
anims/jumping_weapon_right = SubResource( 15 )
anims/run = SubResource( 16 )
anims/run_weapon_left = SubResource( 17 )
anims/run_weapon_right = SubResource( 18 )
anims/standing_weapon_ready_left = SubResource( 19 )
anims/standing_weapon_ready_right = SubResource( 20 )
anims/wall_jumping = SubResource( 21 )
anims/wall_touching = SubResource( 22 )
anims/wall_touching_shooting = SubResource( 23 )
playback/active = true
playback/speed = 2.0
blend_times = [  ]
autoplay = ""

[node name="camera" type="Camera2D" parent="."]

transform/pos = Vector2( 0.598724, 0 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = 0
limit/top = 0
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="bullet_shoot" type="Position2D" parent="."]

visibility/light_mask = 0
transform/pos = Vector2( 31.2428, 4.08784 )

[node name="sound" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = ExtResource( 4 )
default/volume_db = -10.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 0.0
default/filter/resonance = 0.0
default/filter/gain = 0.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

build_mode = 0
polygon = Vector2Array( -0.0828857, 25.17, -16, -22, 16, -22 )
shape_range = Vector2( 0, 0 )
trigger = false

[node name="ui" type="CanvasLayer" parent="."]

editor/display_folded = true
layer = 0
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="left" type="TouchScreenButton" parent="ui"]

transform/pos = Vector2( 27.7593, 360.87 )
transform/scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 5 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = true
action = "move_left"
visibility_mode = 1

[node name="right" type="TouchScreenButton" parent="ui"]

transform/pos = Vector2( 121.542, 361.415 )
transform/scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 6 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = true
action = "move_right"
visibility_mode = 1

[node name="jump" type="TouchScreenButton" parent="ui"]

transform/pos = Vector2( 529.278, 357.169 )
transform/scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 7 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = "jump"
visibility_mode = 1

[node name="fire" type="TouchScreenButton" parent="ui"]

transform/pos = Vector2( 529.277, 275.742 )
transform/scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 8 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = "shoot"
visibility_mode = 1

[node name="screen" type="CanvasLayer" parent="."]

layer = 0
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="hud" parent="screen" instance=ExtResource( 9 )]

[node name="blackscreen" type="Sprite" parent="screen"]

visibility/visible = false
visibility/opacity = 0.0
transform/pos = Vector2( -1.67004, -0.785294 )
transform/scale = Vector2( 10, 10 )
texture = ExtResource( 10 )

[node name="dialog" parent="screen" instance=ExtResource( 11 )]

[node name="wall_check_left" type="Area2D" parent="."]

transform/scale = Vector2( 1.2, 0.8 )
input/pickable = true
shapes/0/shape = SubResource( 24 )
shapes/0/transform = Matrix32( 0.75, 0, 0, 2.5, -7, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="wall_check_shape" type="CollisionShape2D" parent="wall_check_left"]

transform/pos = Vector2( -7, 0 )
transform/scale = Vector2( 0.75, 2.5 )
shape = SubResource( 24 )
trigger = false
_update_shape_index = 0

[node name="wall_check_right" type="Area2D" parent="."]

transform/scale = Vector2( 1.2, 0.8 )
input/pickable = true
shapes/0/shape = SubResource( 24 )
shapes/0/transform = Matrix32( 0.75, 0, 0, 2.5, 7, 0.550156 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="wall_check_shape" type="CollisionShape2D" parent="wall_check_right"]

transform/pos = Vector2( 7, 0.550156 )
transform/scale = Vector2( 0.75, 2.5 )
shape = SubResource( 24 )
trigger = false
_update_shape_index = 0

[node name="timer_damage" type="Timer" parent="."]

process_mode = 1
wait_time = 0.3
one_shot = true
autostart = false

[node name="timer_dust" type="Timer" parent="."]

process_mode = 1
wait_time = 0.2
one_shot = true
autostart = false

[connection signal="timeout" from="timer_damage" to="." method="_on_timer_damage_timeout"]

[connection signal="timeout" from="timer_dust" to="." method="_on_timer_dust_timeout"]


